package ParkingLot.Version2;

public enum SpotType {
    COMPACT,
    LARGE,
    BIKE,
    HANDICAPPED
}
