package ParkingLot.Version2.VehicleTypes;

public class Car implements VehicleType {
    public String getName() { return "CAR"; }
    public double getHourlyRate() { return 20; }
}



