package ParkingLot.Version2.VehicleTypes;

public interface VehicleType {
    String getName();            // e.g. CAR, BIKE, TRUCK
    double getHourlyRate();      // used for billing
}
